# shared-resources

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
cmake/: shared_resourcesConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/shared_resources/: shared_resources.hpp
tests/: CMakeLists.txt  shared_resources.cpp
